2005-06-10  Marcus Meissner  <marcus@jet.franken.de>

	* sierra.c: Added Nikon Coolpix 4300 in wrapper modce.

2005-05-30  Marcus Meissner  <marcus@jet.franken.de>

	* sierra.c: Sanyo VPC G250 does not have register 51.

2005-05-08  Marcus Meissner  <marcus@jet.franken.de>
	
	* sierra.c: The olympus c-420l does only like
	  speeds up to 57600.
	  The epson photopc 650 does only like up to 38400.

2005-02-27  Marcus Meissner  <marcus@jet.franken.de>

	Aurelien Jarno <aurelien@aurel32.net>
	* library.c: Increase buffer size to the one we will try to
	  to read. Newer libusb and kernels give more than 4k back to
	  read()s.

	  Debian bug#296708.

2005-02-16  Marcus Meissner  <marcus@jet.franken.de>
	
	* sierra.c: Added Pentax Optio 450. Thanks to Jack
	  for lending me his camera for some minutes. :)
	  (Capture works, but only if you plug it in with the lens
	   extracted already.)

2005-02-14  Marcus Meissner <marcus@jet.franken.de>
	* library.c, sierra-desc.h, sierra.c, sierra.h, sierra-usbwrap.c:
	  Nikon Coolpix * and Pentax cameras also support the Sierra 
	  protocol (usb wrapped), however with different command bytes.

	  This patch adds support to specify the usb wrapping camera
	  type and also adds the Nikon Coolpix 2500.

2005-01-22  Patrick Mansfield <patmans@users.sourceforge.net>
	* sierra-desc.c, sierra-desc.h: Add code in case we ever need a
	  GP_WIDGET_BUTTON/callback created, not currently used.

2005-01-05  Patrick Mansfield <patmans@users.sourceforge.net>
	* olympus-desc.c: Add other Olympus C750UZ camera settings, they
	  were using the C3040 ones except for the zoom. Also use
	  GP_WIDGET_MENU instead of GP_WIDGET_RADIO for the resolutions,
	  as the radio with many elements takes up to much space.

2005-01-04  Patrick Mansfield <patmans@users.sourceforge.net>
	* sierra-desc.c: Call gp_widget_set_name to properly set the
	  "name", so new gphoto2 --list-config and such are easier to
	  use.
